# JB_fin

./: .gitignore  PROJECT_REQUIREMENTS.md  README.md  ai-review-test.txt  langgraph.json  pyproject.toml  requirements.txt
.github/scripts/: ai-pr-review.mjs
.github/workflows/: ai-pr-review.yml
aiagent/: AGENTS.md  Harness.md
backend/: README.md  __init__.py
backend/agent/: __init__.py  baseline_graph.py  baseline_grouped_graph.py  graph.py  state.py  study_graph.py
backend/tools/: __init__.py  compliance_checker.py  document_parser.py  image_generator.py  rag_search.py  script_generator.py  subtitle_generator.py  target_matching.py  translator.py  tts.py  video_editor.py
docs/: agent-tools.md
idea/: jb_foreign_customer_ai_agent.md  jb_small_business_ai_agent.md
idea/DK/: JB_외국인_에이전트.md
